--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -36,7 +36,7 @@
 
     <div class="container">
         <h1>Privacy Policy</h1>
-        <p><strong>Effective Date:</strong> [Insert Date]</p>
+        <p><strong>Effective Date:</strong> <span id="current-year"></span></p>
         
         <p>Welcome to <strong>Rental Sphere</strong>! Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your personal information when you use our app to rent cars, houses, and cameras.</p>
 
@@ -86,6 +86,11 @@
         <p>📧 <strong>[Your Email]</strong></p>
         <p>📍 <strong>[Your Business Address]</strong></p>
     </div>
+
+    <script>
+        // Get the current year and insert it into the privacy policy
+        document.getElementById('current-year').textContent = new Date().getFullYear();
+    </script>
 
 </body>
 </html>
