--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -43,8 +43,6 @@
         <h2>1. Information We Collect</h2>
         <ul>
             <li><strong>Personal Information:</strong> Name, email, phone number, address, and payment details when you sign up or make a rental.</li>
-            <li><strong>Usage Data:</strong> Information about how you interact with our app, such as search history, rental preferences, and device details.</li>
-            <li><strong>Location Data:</strong> With your permission, we may collect location data to improve search results and rental experiences.</li>
             <li><strong>Media and Files:</strong> If you upload images (such as property or vehicle photos), we collect and store them securely.</li>
         </ul>
 
@@ -60,9 +58,7 @@
         <h2>3. Information Sharing</h2>
         <p>We do <strong>not</strong> sell or rent your personal information. However, we may share data with:</p>
         <ul>
-            <li><strong>Service Providers:</strong> Payment processors and cloud storage services to facilitate secure transactions.</li>
-            <li><strong>Law Enforcement:</strong> If required by law or in case of fraud prevention.</li>
-            <li><strong>Other Users:</strong> Basic profile details (e.g., name and contact) may be shared with rental owners or renters to facilitate bookings.</li>
+            <li><strong>Users:</strong> Basic profile details (e.g., name and contact) may be shared with rental owners or renters to facilitate bookings.</li>
         </ul>
 
         <h2>4. Data Security</h2>
@@ -71,8 +67,6 @@
         <h2>5. Your Rights & Choices</h2>
         <ul>
             <li>Access, update, or delete your personal information.</li>
-            <li>Disable location tracking from your device settings.</li>
-            <li>Opt-out of marketing communications at any time.</li>
         </ul>
 
         <h2>6. Third-Party Links</h2>
