--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -75,10 +75,10 @@
         <h2>7. Changes to This Policy</h2>
         <p>We may update this Privacy Policy from time to time. Any changes will be posted in the app, and continued use of our services implies acceptance of the updated policy.</p>
 
-        <h2>8. Contact Us</h2>
+<!--         <h2>8. Contact Us</h2>
         <p class="contact">If you have any questions about this Privacy Policy or your data, please contact us at:</p>
         <p>📧 <strong>[Your Email]</strong></p>
-        <p>📍 <strong>[Your Business Address]</strong></p>
+        <p>📍 <strong>[Your Business Address]</strong></p> -->
     </div>
 
     <script>
