--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,12 +17,14 @@
             color: #2c3e50;
         }
         .container {
-            max-width: 1000px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+           width: 90%;  /* Use 90% of the viewport width */
+    max-width: 1200px;  /* Set a maximum width for large screens */
+    margin: 40px auto;
+    background: #ffffff;
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    background: #fff;
         }
         ul {
             margin-left: 20px;
